remove some code annotations specific to java 1.6, so minimal project dependency can now be java 1.4